Überarbeitung der Frequenzgenerator-Funktion.
Extrafunktion Frequenzgenerator an TP2 über den 680 Ohm Widerstand.
Bei laufendem Timer1 wird der Schlafzustand nicht benutzt.
Extrafunktion Frequenzmessung an Pin PD4/T0, aber nur mit Serienwiderstand!
Extrafunktion Spannungsmessung (ohne Tastendruck, daher ohne DC-DC Wandler).
Menue für Extrafunktionen eingebaut (nur mega328 mit Option WITH_MENU).
Programm für Optionen WITH_SELFTEST und AUTO_CAL überarbeitet.
Unterstützung eines Mega2560 auf einem ARDUINO mit bootloader über USB.
Verwendung vom Assembler Makro AOUT für flexible Port-Auswahl.
Russische und Ukrainische Hilfetexte für mega328.
Vor der Messung eines Widerstandes mit GetESR wird erst die Induktivität gemessen.
Die Abgleichdaten im EEprom werden ohne USE_EEPROM im Programm initialisiert, wenn unbesetzt.
Alle mega328 Beispielkonfigurationen sind ohne USE_EEPROM konfiguriert.
Automatische Konfiguration vom Mega168 an den vorhandenen Speicherplatz angepaßt.
Bei Mega328 wird das UART bei Start deaktiviert wegen möglicherweise vorgeschaltetem Bootloader. 
Organisation der Kalibrierwerte vereinfacht.
Speicherbelegung von DisplayValue.c optimiert und Makefile für alle Versionen angepaßt.
Unterscheidung von Verarmungs-FETs und Anreicherungs-Fets/ bipolare Transistoren angepaßt.
wait_for_key_ms als Speicher optimierte Assembler-Version.
sleep_5ms mit verändertem Aufruf in C und Assembler Version.
getlog als eigene Datei in C und Speicher optimierte Assembler-Version.
TRIAC Erkennung erweitert, falsche Erkennung mit vertauschtem GC Anschluss als Thyristor wird vermieden.
Alle Makefiles auf geänderte Binde-Reihenfolge und Assembler Versionen umgestellt.
config.h in config.h und autoconf.h geteilt, config.h enthält die änderbaren Parameter.
Funktionen  lcd-routines und PinLayout als opimierte Assembler Versionen.
Reihenfolge der Objekt-Dateien beim Binden optimiert wegen rcall statt call.
Funktion i2lcd und u2lcd eingebaut, Assembler und C-Version