@@ -1,3 +1,5 @@
+Funktion DisplayValue unterstützt bis zu 7 Dezimalstellen.
+Bei Frequenzmessung mit 1s Dauer wird der Counter mit ISR sowohl gestartet als auch gestoppt.
 Überarbeitung der Frequenzgenerator-Funktion.
 Extrafunktion Frequenzgenerator an TP2 über den 680 Ohm Widerstand.
 Bei laufendem Timer1 wird der Schlafzustand nicht benutzt.
